[gd_scene load_steps=8 format=2]

[ext_resource path="res://levels/Level.gd" type="Script" id=1]
[ext_resource path="res://characters/OverworldPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://menu/unshaded.material" type="Material" id=3]
[ext_resource path="res://tileset/fg_tileset.tres" type="TileSet" id=4]
[ext_resource path="res://tileset/bg_tileset.tres" type="TileSet" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 72 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 6 )

[node name="Level" type="YSort"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bg" type="TileMap" parent="."]
z_index = -10
tile_set = ExtResource( 5 )
cell_size = Vector2( 12, 12 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Fg" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 12, 12 )
cell_tile_origin = 2
cell_y_sort = true
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
editor_draw_limits = true
__meta__ = {
"_edit_lock_": true
}

[node name="GoLeft" type="Area2D" parent="Camera2D"]
position = Vector2( 0, 72 )
collision_layer = 0
collision_mask = 2

[node name="Shape" type="CollisionShape2D" parent="Camera2D/GoLeft"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="GoRight" type="Area2D" parent="Camera2D"]
position = Vector2( 256, 72 )
collision_layer = 0
collision_mask = 2

[node name="Shape" type="CollisionShape2D" parent="Camera2D/GoRight"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="GoUp" type="Area2D" parent="Camera2D"]
position = Vector2( 128, 6 )
collision_layer = 0
collision_mask = 2

[node name="Shape" type="CollisionShape2D" parent="Camera2D/GoUp"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="GoDown" type="Area2D" parent="Camera2D"]
position = Vector2( 128, 144 )
collision_layer = 0
collision_mask = 2

[node name="Shape" type="CollisionShape2D" parent="Camera2D/GoDown"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Frames" type="Node2D" parent="."]
z_index = 1000

[node name="Frame1" type="Line2D" parent="Frames"]
material = ExtResource( 3 )
points = PoolVector2Array( 0, 0, 256, 0, 256, 144, 0, 144, 0, 0 )
width = 4.0
default_color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Frame2" type="Line2D" parent="Frames"]
material = ExtResource( 3 )
position = Vector2( 256, 144 )
points = PoolVector2Array( 0, 0, 256, 0, 256, 144, 0, 144, 0, 0 )
width = 4.0
default_color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Frame3" type="Line2D" parent="Frames"]
material = ExtResource( 3 )
position = Vector2( 512, 0 )
points = PoolVector2Array( 0, 0, 256, 0, 256, 144, 0, 144, 0, 0 )
width = 4.0
default_color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Frame4" type="Line2D" parent="Frames"]
material = ExtResource( 3 )
position = Vector2( 256, -144 )
points = PoolVector2Array( 0, 0, 256, 0, 256, 144, 0, 144, 0, 0 )
width = 4.0
default_color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Frame5" type="Line2D" parent="Frames"]
material = ExtResource( 3 )
position = Vector2( 768, -144 )
points = PoolVector2Array( 0, 0, 256, 0, 256, 144, 0, 144, 0, 0 )
width = 4.0
default_color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Frame6" type="Line2D" parent="Frames"]
material = ExtResource( 3 )
position = Vector2( 768, 144 )
points = PoolVector2Array( 0, 0, 256, 0, 256, 144, 0, 144, 0, 0 )
width = 4.0
default_color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Frame7" type="Line2D" parent="Frames"]
material = ExtResource( 3 )
position = Vector2( 512, 288 )
points = PoolVector2Array( 0, 0, 256, 0, 256, 144, 0, 144, 0, 0 )
width = 4.0
default_color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_entered" from="Camera2D/GoLeft" to="." method="_on_GoLeft_body_entered"]
[connection signal="body_entered" from="Camera2D/GoRight" to="." method="_on_GoRight_body_entered"]
[connection signal="body_entered" from="Camera2D/GoUp" to="." method="_on_GoUp_body_entered"]
[connection signal="body_entered" from="Camera2D/GoDown" to="." method="_on_GoDown_body_entered"]
